# PhysicSimulation

./: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  my_project.sln  my_project.vcxproj  my_project.vcxproj.filters
sources/: sources.cmake
sources/core/: core.cpp  core.hpp  program_state.cpp  program_state.hpp  variable_storage.cpp  variable_storage.hpp
sources/event/: gui_event.hpp
sources/gui/: figure.cpp  figure.hpp  gui.cpp  gui.hpp  gui_object.cpp  gui_object.hpp  gui_sources.cmake  window.cpp  window.hpp
sources/logic/: scene.cpp  scene.hpp
sources/main/: main.cpp  main_sources.cmake
sources/simulation/: base_border.cpp  base_border.hpp  base_equation_border.cpp  base_equation_border.hpp  base_function_border.cpp  base_function_border.hpp  base_object.cpp  base_object.hpp  field.hpp  linear_border.cpp  linear_border.hpp  new_form_object.cpp  simulation_sources.cmake  x_const_border.cpp  x_const_border.hpp
sources/simulation/borders/: base_border.cpp  base_border.hpp  base_equation_border.cpp  base_equation_border.hpp  base_function_border.cpp  base_function_border.hpp  circle_border.cpp  circle_border.hpp  def_scope.hpp  (+7 more)
sources/util/: collision_functions.cpp  collision_functions.hpp  exta_math_functions.hpp  extra_math_functions.cpp  extra_math_functions.hpp  mass_center_finding.cpp  mass_center_finding.hpp  util_sources.cmake
sources_main/: main.cpp  test_main.cpp
sources_test/: base_object_test.cpp  collision_functions_test.cpp  sources.cmake
(+31 files in other folders)
